More refactoring! :D